unpackaged/main/default/objects/Case/fields/Abnormal_Screening__c.field-meta.xml
<CustomField>
    <fullName>Abnormal_Screening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abnormal Screening?</label>
    <type>Checkbox</type>
</CustomField>