unpackaged/main/default/objects/Case/fields/AccountId_Text__c.field-meta.xml
<CustomField>
    <fullName>AccountId_Text__c</fullName>
    <description>Text field to populate account id from web to case</description>
    <label>AccountId Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>