unpackaged/main/default/objects/Case/fields/Always_True__c.field-meta.xml
<CustomField>
    <fullName>Always_True__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Always True</label>
    <type>Checkbox</type>
</CustomField>