unpackaged/main/default/objects/Case/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Connection</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>