unpackaged/main/default/objects/Case/fields/Care_Barrier_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Care_Barrier_Keywords__c</fullName>
    <label>Care Barrier Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>