unpackaged/main/default/objects/Case/fields/Conditions_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Keywords__c</fullName>
    <label>Conditions Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>