unpackaged/main/default/objects/Case/fields/Consent_Obtained_for_Navigation__c.field-meta.xml
<CustomField>
    <fullName>Consent_Obtained_for_Navigation__c</fullName>
    <formula>Account.Consent_Obtained_for_Navigation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Obtained for Navigation?</label>
    <type>Checkbox</type>
</CustomField>