unpackaged/main/default/objects/Case/fields/Diagnosis_Received_Receiving_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Received_Receiving_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnosis Received/Receiving Treatment</label>
    <type>Checkbox</type>
</CustomField>