unpackaged/main/default/objects/Case/fields/External_Resource_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>External_Resource_Recommendation__c</fullName>
    <description>Stores a URL. Should be filled with the URL of the primary web resource suggested to a patient.</description>
    <inlineHelpText>Stores a URL. Should be filled with the URL of the primary web resource suggested to a patient.</inlineHelpText>
    <label>External Resource Recommendation</label>
    <type>Url</type>
</CustomField>