unpackaged/main/default/objects/Case/fields/Initial_Care_Barrier__c.field-meta.xml
<CustomField>
    <fullName>Initial_Care_Barrier__c</fullName>
    <inlineHelpText>Pick the Care Barriers that should be worked on</inlineHelpText>
    <label>Initial Care Barrier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transportation for Care</fullName>
            </value>
            <value>
                <fullName>No Physician</fullName>
            </value>
            <value>
                <fullName>No Medical Coverage</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>