unpackaged/main/default/objects/Case/fields/Initial_Clinical_Trial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Clinical_Trial_Notes__c</fullName>
    <inlineHelpText>Put in ideas or details of clinical trial for this time.</inlineHelpText>
    <label>Initial Clinical Trial Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>