unpackaged/main/default/objects/Case/fields/Initial_Concerns_Issues__c.field-meta.xml
<CustomField>
    <fullName>Initial_Concerns_Issues__c</fullName>
    <inlineHelpText>Please enter what is relevant about  concerns. on this initial call.</inlineHelpText>
    <label>Initial Concerns - Issues</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>