unpackaged/main/default/objects/Case/fields/Initial_Emotial_State__c.field-meta.xml
<CustomField>
    <fullName>Initial_Emotial_State__c</fullName>
    <label>Initial Emotional State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Calm</fullName>
            </value>
            <value>
                <fullName>Sad</fullName>
            </value>
            <value>
                <fullName>Anxious</fullName>
            </value>
            <value>
                <fullName>Angry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>