unpackaged/main/default/objects/Case/fields/Initial_Emotional_State_Other__c.field-meta.xml
<CustomField>
    <fullName>Initial_Emotional_State_Other__c</fullName>
    <label>Initial Emotional State (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>