unpackaged/main/default/objects/Case/fields/Initial_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Initial_Follow_Up__c</fullName>
    <inlineHelpText>Follow up from the Initial (first) contact</inlineHelpText>
    <label>Initial Follow Up</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nothing</fullName>
            </value>
            <value>
                <fullName>Patient will Call Komen</fullName>
            </value>
            <value>
                <fullName>Scheduled Call Back</fullName>
            </value>
            <value>
                <fullName>Send Care Plan Info</fullName>
            </value>
            <value>
                <fullName>Send Resource Material</fullName>
            </value>
            <value>
                <fullName>Send Barrier Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>