unpackaged/main/default/objects/Case/fields/Initial_Found_Helpline_Via__c.field-meta.xml
<CustomField>
    <fullName>Initial_Found_Helpline_Via__c</fullName>
    <label>How did you hear about the program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital/Healthcare Provider (e.g. doctor, nurse, patient navigator, social worker)</fullName>
            </value>
            <value>
                <fullName>Internet/Radio/TV</fullName>
            </value>
            <value>
                <fullName>Local Komen Affiliate</fullName>
            </value>
            <value>
                <fullName>Family/Friends/Another Patient</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Komen Breast Care Helpline (1-877 GO KOMEN)</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
                <isActive>false</isActive>
                <label>ACS</label>
            </value>
            <value>
                <fullName>Affiliate</fullName>
                <isActive>false</isActive>
                <label>Affiliate</label>
            </value>
            <value>
                <fullName>Community Organization (faith org, United Way 211, etc)</fullName>
                <isActive>false</isActive>
                <label>Community Organization (faith org, United Way 211, etc)</label>
            </value>
            <value>
                <fullName>Community/Resource Navigator</fullName>
                <isActive>false</isActive>
                <label>Community/Resource Navigator</label>
            </value>
            <value>
                <fullName>Doctor/Healthcare Provider</fullName>
                <isActive>false</isActive>
                <label>Doctor/Healthcare Provider</label>
            </value>
            <value>
                <fullName>Friends/Family</fullName>
                <isActive>false</isActive>
                <label>Friends/Family</label>
            </value>
            <value>
                <fullName>Healthcare Provider</fullName>
                <isActive>false</isActive>
                <label>Healthcare Provider</label>
            </value>
            <value>
                <fullName>Hospice/Palliative Care</fullName>
                <isActive>false</isActive>
                <label>Hospice/Palliative Care</label>
            </value>
            <value>
                <fullName>Insurance</fullName>
                <isActive>false</isActive>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>Internet</fullName>
                <isActive>false</isActive>
                <label>Internet</label>
            </value>
            <value>
                <fullName>Internet Search (Google, Yahoo, etc.)</fullName>
                <isActive>false</isActive>
                <label>Internet Search (Google, Yahoo, etc.)</label>
            </value>
            <value>
                <fullName>Know Your Girls Ad Campaign</fullName>
                <isActive>false</isActive>
                <label>Know Your Girls Ad Campaign</label>
            </value>
            <value>
                <fullName>Komen</fullName>
                <isActive>false</isActive>
                <label>Komen</label>
            </value>
            <value>
                <fullName>Komen Event</fullName>
                <isActive>false</isActive>
                <label>Komen Event</label>
            </value>
            <value>
                <fullName>Komen Pamphlet/Flyer</fullName>
                <isActive>false</isActive>
                <label>Komen Pamphlet/Flyer</label>
            </value>
            <value>
                <fullName>Komen Patient Navigator</fullName>
                <isActive>false</isActive>
                <label>Komen Patient Navigator</label>
            </value>
            <value>
                <fullName>Komen Race/Walk event</fullName>
                <isActive>false</isActive>
                <label>Komen Race/Walk event</label>
            </value>
            <value>
                <fullName>Komen TAP Coordinator</fullName>
                <isActive>false</isActive>
                <label>Komen TAP Coordinator</label>
            </value>
            <value>
                <fullName>Komen-generated Email</fullName>
                <isActive>false</isActive>
                <label>Komen-generated Email</label>
            </value>
            <value>
                <fullName>NBCCCEDP</fullName>
                <isActive>false</isActive>
                <label>NBCCCEDP</label>
            </value>
            <value>
                <fullName>NCI</fullName>
                <isActive>false</isActive>
                <label>NCI</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other Cancer Org (NCI, ACS, CancerCare, etc)</fullName>
                <isActive>false</isActive>
                <label>Other Cancer Org (NCI, ACS, CancerCare, etc)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>