unpackaged/main/default/objects/Case/fields/Initial_InActiveTreatment__c.field-meta.xml
<CustomField>
    <fullName>Initial_InActiveTreatment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Patient is under active treatment.</inlineHelpText>
    <label>Initial In Active Treatment</label>
    <type>Checkbox</type>
</CustomField>