unpackaged/main/default/objects/Case/fields/Initial_Intention_to_Act__c.field-meta.xml
<CustomField>
    <fullName>Initial_Intention_to_Act__c</fullName>
    <inlineHelpText>Pick one or more actions that the contact intends to complete.</inlineHelpText>
    <label>Initial Intention to Act</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use the information I received to make decisions</fullName>
            </value>
            <value>
                <fullName>Use the information I received to talk to my doctor</fullName>
            </value>
            <value>
                <fullName>Share this information with family and/or friends</fullName>
            </value>
            <value>
                <fullName>Gather appropriate medical records / information in order to understand diagnosis a little better or answer certain questions</fullName>
            </value>
            <value>
                <fullName>Contact a treatment assistance program</fullName>
            </value>
            <value>
                <fullName>Make a mammogram appointment</fullName>
            </value>
            <value>
                <fullName>Call the helpline back at a later time</fullName>
            </value>
            <value>
                <fullName>Visit komen.org for more information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>