unpackaged/main/default/objects/Case/fields/Initial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Notes__c</fullName>
    <inlineHelpText>Use this for your Notes.</inlineHelpText>
    <label>Initial Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>