unpackaged/main/default/objects/Case/fields/Initial_Recommended_Resources__c.field-meta.xml
<CustomField>
    <fullName>Initial_Recommended_Resources__c</fullName>
    <inlineHelpText>Enter Notes for recommended initial resources.</inlineHelpText>
    <label>Initial Recommended Resources</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>