unpackaged/main/default/objects/Case/fields/Initial_Stage__c.field-meta.xml
<CustomField>
    <fullName>Initial_Stage__c</fullName>
    <inlineHelpText>Stage of cancer on initial contact.</inlineHelpText>
    <label>Initial Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 0</fullName>
            </value>
            <value>
                <fullName>Stage I</fullName>
            </value>
            <value>
                <fullName>Stage II</fullName>
            </value>
            <value>
                <fullName>Stage III</fullName>
            </value>
            <value>
                <fullName>Stage IV</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>