unpackaged/main/default/objects/Case/fields/Initiating_Factor_s_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initiating_Factor_s_for_Contact__c</fullName>
    <label>Initiating Factor(s) for Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access to Screening</fullName>
            </value>
            <value>
                <fullName>Abnormal screening result</fullName>
            </value>
            <value>
                <fullName>Diagnosis received</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Issues receiving treatment</fullName>
            </value>
            <value>
                <fullName>Psychosocial Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>