unpackaged/main/default/objects/Case/fields/Is_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Care_Plan__c</fullName>
    <formula>RecordType.Name = &quot;CarePlan&quot;</formula>
    <label>Is Care Plan?</label>
    <type>Checkbox</type>
</CustomField>