unpackaged/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Link is broken</fullName>
            </value>
            <value>
                <fullName>Contact information is invalid</fullName>
            </value>
            <value>
                <fullName>Program/resource no longer valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>