unpackaged/main/default/objects/Case/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>