unpackaged/main/default/objects/Case/fields/Knowledge_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Keywords__c</fullName>
    <label>Knowledge Keywords</label>
    <type>TextArea</type>
</CustomField>