unpackaged/main/default/objects/Case/fields/Pat_Nav_Topics__c.field-meta.xml
<CustomField>
    <fullName>Pat_Nav_Topics__c</fullName>
    <label>Pat Nav Topics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Breast Cancer Clinical Trials</fullName>
                <isActive>false</isActive>
                <label>Breast Cancer Clinical Trials</label>
            </value>
            <value>
                <fullName>Breast Health &amp; Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>General/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>