unpackaged/main/default/objects/Case/fields/Preferred_Language_formula__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_formula__c</fullName>
    <formula>TEXT(Account.PersonContact.Preferred_Language1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>