unpackaged/main/default/objects/Case/fields/Preferred_Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Method_of_Contact__c</fullName>
    <label>Preferred Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>