unpackaged/main/default/objects/Case/fields/Primary_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Information__c</fullName>
    <label>Primary Contact Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>