unpackaged/main/default/objects/Case/fields/Related_Resource__c.field-meta.xml
<CustomField>
    <fullName>Related_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Resource</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>