unpackaged/main/default/objects/Case/fields/Resource_Address__c.field-meta.xml
<CustomField>
    <fullName>Resource_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>