unpackaged/main/default/objects/Case/fields/Resource_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resource_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>