unpackaged/main/default/objects/Case/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <formula>IF(ISBLANK( ClosedDate ) , TEXT( Status ), &quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Status</label>
    <type>Text</type>
</CustomField>