unpackaged/main/default/objects/Case/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>Top level routing of Case provided by users via Chat or Web-to-Case interfaces. Serves as the key value for Case to Queue assignments. NOTE: TOPIC CANNOT BE SET TO REQUIRED. THIS WILL CAUSE AUTOMATED INBOUND CHANNELS TO FAIL</description>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Breast Health Topics</fullName>
            </value>
            <value>
                <fullName>Breast Health &amp; Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Breast Cancer Clinical Trials</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Donations &amp; Fundraisers</fullName>
            </value>
            <value>
                <fullName>3-Day Events</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>Knowledge Article</fullName>
            </value>
            <value>
                <fullName>General/Other</fullName>
            </value>
            <value>
                <fullName>Donaciones y Recaudación de Fondos</fullName>
                <isActive>false</isActive>
                <label>Donaciones y Recaudación de Fondos</label>
            </value>
            <value>
                <fullName>Estudios clínicos</fullName>
                <isActive>false</isActive>
                <label>Estudios clínicos</label>
            </value>
            <value>
                <fullName>Eventos de 3 días</fullName>
                <isActive>false</isActive>
                <label>Eventos de 3 días</label>
            </value>
            <value>
                <fullName>La Salud del Seno</fullName>
                <isActive>false</isActive>
                <label>La Salud del Seno</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>