unpackaged/main/default/objects/Case/fields/Total_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Handle_Time__c</fullName>
    <label>Total Handle Time (min)</label>
    <summarizedField>Case_Handle_Time_Log__c.Handle_Time__c</summarizedField>
    <summaryForeignKey>Case_Handle_Time_Log__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>