unpackaged/main/default/objects/Case/fields/Total_Queue_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Queue_Time__c</fullName>
    <label>Total Queue Time (min)</label>
    <summarizedField>Case_Handle_Time_Log__c.Handle_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Case_Handle_Time_Log__c.Agent__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Handle_Time_Log__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>