unpackaged/main/default/objects/Case/fields/Total_Queue_Time_hour__c.field-meta.xml
<CustomField>
    <fullName>Total_Queue_Time_hour__c</fullName>
    <formula>Total_Queue_Time__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Queue Time (hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>