unpackaged/main/default/objects/Case/recordTypes/HealthCloudGA__CareGap.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__CareGap</fullName>
    <active>false</active>
    <businessProcess>HealthCloudGA__CareGap</businessProcess>
    <description>Defines a care gap for an individual</description>
    <label>CareGap</label>
</RecordType>