unpackaged/main/default/objects/Case/recordTypes/Helpline_Call_Log.recordType-meta.xml
<RecordType>
    <fullName>Helpline_Call_Log</fullName>
    <active>true</active>
    <businessProcess>Helpline</businessProcess>
    <description>Simple interface for capturing key details during an inbound Helpline Call,Chat,Email</description>
    <label>Helpline Call Log</label>
</RecordType>